package org.example.bank.factory;

public enum AccountType {
    DEBIT,
    CREDIT,
    SAVINGS
}